Fixed overlapping issue
> Defined a `min-width` for the side navigation bar

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -55,6 +55,7 @@ body > main > nav {
     display: flex;
     flex-flow: column nowrap;
     background-color: #EEEEEE;
+    min-width: 100px;
     width: 15%;
 }
 
